@@ -1,3 +1,14 @@
+2018-03-12  Tim Horton  <timothy_horton@apple.com>
+
+        Use a different SPI header for some AudioToolbox enums
+        https://bugs.webkit.org/show_bug.cgi?id=183574
+        <rdar://problem/38385889>
+
+        Reviewed by Anders Carlsson.
+
+        * PAL.xcodeproj/project.pbxproj:
+        * pal/spi/cocoa/AudioToolboxSPI.h: Added.
+
 2018-03-07  Tim Horton  <timothy_horton@apple.com>
 
         Sort and separate FeatureDefines.xcconfig
